[MOD] sale_order_alternative_product: change label name

--- a/sale_order_alternative_products/views/res_config.xml
+++ b/sale_order_alternative_products/views/res_config.xml
@@ -19,7 +19,7 @@
                         <div class="o_setting_left_pane">
                         </div>
                         <div class="o_setting_right_pane">
-                            <label for="alternative_product" />
+                            <label for="sale_alternative_product" />
                             <div class="text-muted">
                                Alternative Product Configuration
                             </div>
