--- a/delivery_parcelhub_whistl/views/views.xml
+++ b/delivery_parcelhub_whistl/views/views.xml
@@ -53,16 +53,41 @@
                     </group>
                 </page>
                 <page
+                    name="whistl_debug"
                     string="Whistl Debug"
-                    groups="base.group_no_one"
                     attrs="{'invisible': [('delivery_type', '!=', 'whistl')]}"
+                    groups="base.group_no_one"
                 >
                     <group>
-                        <field name="whistl_token" password="True" />
-                        <field name="whistl_refresh_token" password="True" />
+                        <field name="whistl_token" />
+                        <field name="whistl_refresh_token" />
                         <field name="whistl_token_expiry" />
+                        <button
+                            name="action_reset_tokens"
+                            string="Reset Tokens"
+                            type="object"
+                            class="oe_highlight"
+                        />
                     </group>
                 </page>
+            </xpath>
+        </field>
+    </record>
+
+    <record id="view_picking_withcarrier_out_form" model="ir.ui.view">
+        <field name="name">view_picking_withcarrier_out_form</field>
+        <field name="model">stock.picking</field>
+        <field
+            name="inherit_id"
+            ref="delivery_state_events.view_picking_withcarrier_out_form"
+        />
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='tracking_state']" position="after">
+                <field
+                    name="whistl_shipment_id"
+                    readonly="1"
+                    attrs="{'invisible': [('delivery_type', '!=', 'whistl')]}"
+                />
             </xpath>
         </field>
     </record>
